fix(Clock): :art: Adopt gap if no commas are present

--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@
 }
 
 .clockContainerGap {
-  gap: 2vw;
+  gap: 3.15vw;
 }
 
 .clockUnit {
